fix alignment of elements on landing page - mobile view

--- a/app/assets/stylesheets/layout/landing-page.scss
+++ b/app/assets/stylesheets/layout/landing-page.scss
@@ -13,7 +13,7 @@ div.section-well {
 @media (min-width: $screen-sm-min) {
   div.section-well {
     padding: 1em 2em;
-    margin: 0em;
+    margin: 0;
   }
 }
 
